# oci-registry-as-model-registry

./: Cargo.toml  Makefile  README.md  flake.nix
demo/: Makefile  README.md  flake.nix  go.mod  go.sum  main.go
src/: cache.rs  describe.rs  errors.rs  list.rs  main.rs  model.rs  pull.rs  push.rs  run.rs
