[package]
name = "oci-registry-as-model-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4"
llm = { git = "https://github.com/rustformers/llm", branch = "main", features = ["cublas"] }
oci-distribution = "0.10"
prettytable-rs = "0.10"
rand = "0.8"
serde = "1"
serde_json = "1"
sha1 = "0.10"
sled = "0.34"
tokio = { version = "1.35", features = ["full"] }
xdg = "2.5"